--- a/index.html
+++ b/index.html
@@ -54,20 +54,48 @@
     </div>
   </nav>
 
-  
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <!-- CAROUSEL  -->
+
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+    </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="img/ciclismo.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="text-dark">Ciclismo Tour</h3>
+          <p class="text-dark">Obtendrás y vivirás una de las mayores experiencias sobre  dos ruedas</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="img/ciclismo2.jpg" class="d-block w-100" alt="..." >
+        <img src="img/ciclismo2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Ciclismo Tour</h3>
+          <p>Sentirás el la corriente marina pedaleando en tu bicicleta</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="img/ciclismo3.jpg" class="d-block w-100" alt="..." >
+        <img src="img/ciclismo3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="text-dark">Ciclismo Tour</h3>
+          <p class="text-dark">Nuestro tour es muy seguro al contar con una ciclovía que nos dirije a estas magnificas rutas</p>
+        </div>
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
   </div>
+
+    <!-- ABOUT  -->
 
   <div class="container-fluid" id="about">
     <div class="row bg-dark text-white p-5 text-center">
@@ -77,19 +105,19 @@
       <div class="col-sm-6">
         <h3>Ciclismo Tour</h3>
         <p>
-          <span>Elit exercitationem id illo sit distinctio. Deserunt ut debitis voluptates mollitia
-            dignissimos eligendi
-            vel quidem itaque dolores ratione ut. Soluta accusantium dolor nemo suscipit rerum. Aliquid
-            quasi excepturi
-            provident eos.</span>
+          <span>Con ciclismo tour obtendrás y vivirás una de las mayores experiencias sobre  dos ruedas, ya que al contar con una ruta que recorre algunas de las playas más importantes de la ruta del spondylus comprendidas por la costa mantense sentirás el la corriente marina pedaleando en tu bicicleta, nuestro tour es muy seguro al contar con una ciclovía que nos dirije a estas magnificas rutas</span>
         </p>
       </div>
     </div>
   </div>
 
+    <!-- FOOTER -->
+
   <footer class="bg-light text-center p-2">
     <p class="h3"> Stefano Johan García Parrales & Erick Darío Valdez Cedeño &copy;</p>
   </footer>
+
+    <!-- SCRIPTS  -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
@@ -101,8 +129,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
     crossorigin="anonymous"></script>
-
-
 
 </body>
 
