--- a/InicioUser.html
+++ b/InicioUser.html
@@ -20,7 +20,6 @@
     <!-- ANIMATE.CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="css/form.css">
 
 </head>
@@ -56,7 +55,7 @@
                 <div class="text-center">
                     <h1>REGISTRO DE RUTA</h1>
                 </div>
-                <form class="col-12" method="get" onsubmit="return ruta();">
+                <form class="col-12" method="get" onsubmit="return registrarRuta();">
                     <div class="form-group" id="user-group">
                         <input type="text" class="form-control" placeholder="Nombre completo" name="nombre" id="nombre"/>
                     </div> <br />
