--- a/index.html
+++ b/index.html
@@ -32,27 +32,26 @@
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container p-2">
-      <a class="navbar-brand" href="index.html"> Ciclismo tour </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"> Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about"> Acerca De </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html"> Login </a>
-          </li>
-        </ul>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"> Ciclismo tour </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html"> Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about"> Acerca De </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html"> Login </a>
+        </li>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- CAROUSEL  -->
 
@@ -117,18 +116,7 @@
     <p class="h3"> Stefano Johan García Parrales & Erick Darío Valdez Cedeño &copy;</p>
   </footer>
 
-    <!-- SCRIPTS  -->
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
 
