--- a/login.html
+++ b/login.html
@@ -20,16 +20,15 @@
 
 <body>
 
-     <!-- NAVBAR -->
+  <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container p-2">
+    <div class="container-fluid">
       <a class="navbar-brand" href="index.html"> Ciclismo tour </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="index.html"> Inicio</a>
           </li>
@@ -39,10 +38,10 @@
           <li class="nav-item">
             <a class="nav-link" href="login.html"> Login </a>
           </li>
-        </ul>
+        </div>
       </div>
     </div>
-  </nav>
+  </nav>   
 
     <div class="modal-dialog text-center">
         <div class="col-sm-8 main-section">
